[tool.poetry]
name = "dpsa4flower"
version = "0.1.0"
description = "A server and client to use the flower framework with DPSA."
authors = ["Maxim Urschumzew <maxim@makuri.dev>", "ooovi"]
readme = "README.md"
packages = [{include = "dpsa4flower"}]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.4.0"
dpsa4fl-bindings = "^0.1.3"
numpy = "^1.24.3"
dataclass-wizard = "^0.22.2"

[tool.pyright]
include = ["dpsa4flower"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
